# Leaven

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/gl3/: checkerboard.frag  checkerboard.vert  part.frag  part.vert  phong.frag  phong.vert  spheres.frag  spheres.vert
lib/: CMakeLists.txt
lib/src/: common.h  surfaceSampler.cpp  surfaceSampler.h  typedef.h  volumeSampler.cpp  volumeSampler.h
qrc/: colors.js  icons.qrc  layout.js  main.qml  resources.qrc
qrc/Components/: LeavenIconButton.qml  SettingsExpander.qml  SettingsInput.qml  SettingsLabel.qml  SwitchButton.qml  TextIconButton.qml
src/: main.cpp
src/gui/: backend.cpp  backend.h  openGLWindow.cpp  openGLWindow.h  settings.h
src/helpers/: OBJLoader.h
